# f1-discord-bot

./: .gitignore  main.py  pyproject.toml  test.py
commentary-bot/: bot.ipynb  bot.py
commentary-bot/document/: british_gp_2020.docx
commentary-bot/task/: generate_event_cmt.py  generate_grid_cmt.py  generate_openning.py  generate_result.py
commentary_bot/: bot.ipynb  bot.py
commentary_bot/task/: generate_event_cmt.py  generate_openning.py
data/5768/: intervals.json  laps.json  overtakes.json  pit.json  position.json  race_control.json
db/: news.json
services/: format_driver_prompt.py  openf1data.py  replay_utils.py  track_zones.py
src/: bot.py
src/commands/: sessions_command.py
src/handlers/: session_helpers.py  session_list.py  session_results.py
src/services/: sessions.py
